--- a/hugo.yaml
+++ b/hugo.yaml
@@ -13,9 +13,18 @@ markup:
     ordered: false
     startLevel: 2
 
+
+
 params:
-  toc: true
+  
   bootstrap_container: 'container-xxl'
+  menu:
+    navbar:
+      display_title: false
+      display_logo: true
+      display_search: true
+    toc: true
+    
   jsdelivr:
     css:
       - url: 'https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css'
